[package]
name = "particle_id"
description = "Particle IDs according to the Monte Carlo Particle Numbering Scheme"
authors = ["Andreas Maier <amaier@ifae.es>"]
version = "0.5.1"
edition = "2021"
license = "GPL-3.0-or-later"
keywords = ["physics", "PDG"]
categories = ["science"]
repository = "https://github.com/a-maier/particle_id"

[dependencies]
serde = { version = "1.0", optional = true, features = ["derive"] }
